// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty type snapshot test 1`] = `
<span
  className="text-muted"
>
  -
</span>
`;

exports[`Empty type snapshot test 2`] = `
<span
  className="text-muted"
>
  test
</span>
`;
